--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace"
+      href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Roboto+Mono"
       rel="stylesheet"
     />
     <link
