--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,7 @@
     <title>Code Aloud</title>
     <link rel="stylesheet" href="/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Roboto+Mono"
+      href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Montserrat|Noto+Sans|Raleway|Roboto|Roboto+Mono"
       rel="stylesheet"
     />
     <link
